tests/baselines/reference/unicodeIdentifierName2.errors.txt
==== tests/cases/compiler/unicodeIdentifierName2.ts (7 errors) ====
    var a₁ = "hello"; alert(a₁)
         ~
!!! error TS1001: Unexpected character "₁".
         ~
!!! error TS1005: ',' expected.
           ~
!!! error TS1008: Unexpected token; 'identifier' expected.
             ~~~~~~~
!!! error TS1008: Unexpected token; 'identifier' expected.
                             ~
!!! error TS1001: Unexpected character "₁".
                             ~
!!! error TS1005: ',' expected.
                      ~~~~~
!!! error TS2095: Could not find symbol 'alert'.